--- a/MyApp/appsettings.json
+++ b/MyApp/appsettings.json
@@ -13,10 +13,30 @@
     }
   },
   "NavItems": [
-    { "href":"/",         "label": "Home", "exact":true },
-    { "href":"/about",    "label": "About" },
-    { "href":"/signin",   "label": "Sign In",  "hide":"auth" },
-    { "href":"/profile",  "label": "Profile",  "show":"auth" },
-    { "href":"/admin",    "label": "Admin",    "show":"role:Admin" }
+    {
+      "href": "/",
+      "label": "Home",
+      "exact": true
+    },
+    {
+      "href": "/about",
+      "label": "About"
+    },
+    {
+      "href": "/signin",
+      "label": "Sign In"
+    },
+    {
+      "href": "/profile",
+      "label": "Profile"
+    },
+    {
+      "href": "/admin",
+      "label": "Admin"
+    },
+    {
+      "href": "/report-form",
+      "label": "ReportForm"
+    }
   ]
 }
