--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -21,7 +21,8 @@
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuetify": "^2.5.8"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
