--- a/MyApp/ClientApp/package.json
+++ b/MyApp/ClientApp/package.json
@@ -6,7 +6,6 @@
     "postinstall": "npm run build",
     "dev": "vue-cli-service build --watch",
     "serve": "vue-cli-service serve",
-    "dtos": "x typescript",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "publish": "vue-cli-service build && dotnet publish -c Release",
@@ -75,7 +74,7 @@
       "**/tests/unit/**/*.spec.(js|jsx|ts|tsx)|**/__tests__/*.(js|jsx|ts|tsx)"
     ],
     "globals": {
-      "testURL": "https://localhost:5001/"
+      "testURL": "http://localhost:5001/"
     }
   }
 }
